--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "social-app",
+  "main": "index.js",
+  "script":{
+    "build:dev": "webpack-dev-server --open 'Google Chrome'",
+    "build:prod":"webpack -p --env production",
+    "start":"node server/server.js"
+  },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
